<resources>
    <string name="app_name">BLE Peripheral</string>
    <string name="start_broadcast">BLE Peripheral 廣播發送</string>
    <string name="stop_broadcast">BLE Peripheral 廣播中斷</string>
    <string name="unbound">BLE unbound</string>

    <string name="broadcast_MAC">廣播 MAC</string>
    <string name="connect_device">連線裝置</string>
    <string name="characteristic_value">Characteristic Value</string>

    <string name="no_mac">尚未廣播</string>
    <string name="no_device">無裝置連線</string>
    <string name="no_value">尚未廣播，無數值</string>

    <string name="status_advertising">已廣播</string>
    <string name="status_advDataTooLarge">廣播資料太長</string>
    <string name="status_advFeatureUnsupported">廣播不支援</string>
    <string name="status_advInternalError">廣播發生內部錯誤</string>
    <string name="status_advTooManyAdvertisers">廣播過多</string>
    <string name="status_notAdvertising">無廣播</string>
    <string name="status_advNotEnabled">無法廣播</string>

    <string name="status_deviceConnect">設備已連線</string>
    <string name="status_deviceDisConnect">設備無法連線</string>
</resources>
